// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Proto representation of the internal ModelRollout entity type.
message ModelRollout {
  fixed64 external_model_provider_id = 1;
  fixed64 external_model_suite_id = 2;
  fixed64 external_model_line_id = 3;
  fixed64 external_model_rollout_id = 4;

  // Start of the rollout period, inclusive.
  google.protobuf.Timestamp rollout_period_start_time = 5;
  // End of the rollout period, exclusive.
  google.protobuf.Timestamp rollout_period_end_time = 6;

  google.protobuf.Timestamp rollout_freeze_time = 7;

  fixed64 external_previous_model_rollout_id = 8;

  fixed64 external_model_release_id = 9;

  // When the 'ModelRollout' was created.
  google.protobuf.Timestamp create_time = 10;
  // When the 'ModelRollout' was last updated.
  google.protobuf.Timestamp update_time = 11;
}
